chnaged pom war name and login servlet path

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                 <version>3.4.0</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <warName>car-detailing</warName>
+                    <warName>ROOT</warName>
                 </configuration>
             </plugin>
             <plugin>
